nodered/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - name: node-red
        image: nodered/node-red:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1880
          name: node-red-ui
        securityContext:
          privileged: true
        volumeMounts:
        - name: node-red
          subPathExpr: $(NODE_NAME)
          mountPath: /data
      volumes:
      - name: node-red
        persistentVolumeClaim:
          claimName: node-red-claim2
