nodered/node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  type: NodePort
  ports:
    - port: 1880
      targetPort: 1880
      nodePort: 30025
      protocol: TCP
      name: node-red
  selector:
    app: node-red
